Edited pages to have a more uniform visible layout (padding of 2 on left and right sides of main content column). Temporarily disabled Muni Admin from seeing Main page (My Municipality dashboard) for Fishers demo tomorrow while Bug #799 is being resolved. Files modified - [leftnav.html,MyProfile.html,ManageUsers.html,VendorApplication.html,ManualFeeTypes.html,CXGlobalSettings.html,ManageSubscriptions.html,UserOpenForms.html,ManageMunicipalityVendors.html,MunicipalitySettings.html,UserOpenForms.js,MunicipalityUsers.html,CompanyProfile.html,ManageMunicipalities.html,ManageGISData.html,CompanyMunicipalities.html,EditForm.html,EditGISRecord.html,UserClosedForms.html,CompanyUsers.html]

--- a/src/main/webapp/pages/CompanyUsers/CompanyUsers.html
+++ b/src/main/webapp/pages/CompanyUsers/CompanyUsers.html
@@ -24,7 +24,7 @@
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow10">
-                    <wm-gridcolumn columnwidth="12" name="gridcolumn25">
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn25" padding="unset 2em">
                         <wm-tabs name="tabs1">
                             <wm-tabpane name="tabpane1" title="Company Users">
                                 <wm-layoutgrid name="layoutgrid2_1">
