--- a/src/main/webapp/pages/EditForm/EditForm.html
+++ b/src/main/webapp/pages/EditForm/EditForm.html
@@ -16,11 +16,11 @@
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow26_1">
-                    <wm-gridcolumn columnwidth="12" name="gridcolumn58_1" padding="2em 2em unset 0.5em">
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn58_1" padding="2em 2em unset 2em">
                         <wm-tabs name="tabs1">
                             <wm-tabpane name="tabpaneFORMINFO" title="Form Info">
                                 <wm-liveform novalidate="false" errormessage="" title="bind:Variables.ReadFormType.dataSet.data[$i].formType" iconclass="wi wi-edit" defaultmode="Edit" dataset="bind:Variables.UpdateFormTypes.dataSet" captionalign="left" captionposition="top"
-                                name="liveformUpdateFormType" backgroundcolor="#dbdbdb" margin="unset 2em" formdata="bind:Variables.CurrentFormObj.firstRecord">
+                                name="liveformUpdateFormType" backgroundcolor="#dbdbdb" formdata="bind:Variables.CurrentFormObj.firstRecord">
                                     <wm-layoutgrid columns="2" name="layoutgrid2">
                                         <wm-gridrow name="gridrow15">
                                             <wm-gridcolumn columnwidth="12" name="gridcolumn25" padding="1em unset">
@@ -299,7 +299,7 @@
                             <wm-tabpane name="tabpaneCATEGORIES" title="Categories">
                                 <wm-layoutgrid name="layoutgrid6">
                                     <wm-gridrow name="gridrow26">
-                                        <wm-gridcolumn columnwidth="12" name="gridcolumn53" padding="unset unset unset 1em">
+                                        <wm-gridcolumn columnwidth="12" name="gridcolumn53">
                                             <wm-livegrid formlayout="dialog" name="livegrid2">
                                                 <wm-grid gridfirstrowselect="true" editmode="dialog" title="" dataset="bind:Variables.FormCategories.dataSet" navigation="Classic" name="grid2" filtermode="multicolumn" exportformat="EXCEL">
                                                     <wm-grid-column binding="id" caption="Id" type="integer" primary-key="true" generator="identity" readonly="true" show="true"></wm-grid-column>
