--- a/src/main/webapp/pages/EditGISRecord/EditGISRecord.html
+++ b/src/main/webapp/pages/EditGISRecord/EditGISRecord.html
@@ -11,7 +11,7 @@
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="6" name="gridcolumn33"></wm-gridcolumn>
                 </wm-gridrow>
-                <wm-gridrow name="gridrow17">
+                <wm-gridrow name="gridrow17" padding="unset 2em">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn29" padding=".2em unset 1em unset">
                         <wm-panel iconclass="wi wi-chrome-reader-mode" autoclose="outsideClick" name="panelGISRecord" title="GIS Record" class="panel-primary" accessroles="CXAdmin,MunicipalityAdmin">
                             <wm-liveform novalidate="false" errormessage="" title="" iconclass="" defaultmode="Edit" dataset="bind:Variables.Cx2GisrecordsData.dataSet" captionalign="left" captionposition="top" name="liveformGisrecords" formdata="bind:Variables.SelectedGISobj.firstRecord">
@@ -86,7 +86,7 @@
                         </wm-panel>
                     </wm-gridcolumn>
                 </wm-gridrow>
-                <wm-gridrow name="gridrow18">
+                <wm-gridrow name="gridrow18" padding="unset 2em">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn31">
                         <wm-panel iconclass="wi wi-contacts" autoclose="outsideClick" name="panel2" title="GIS Contacts" class="panel-primary">
                             <wm-livegrid formlayout="dialog" name="livegridGISContacts">
@@ -164,12 +164,12 @@
                         </wm-panel>
                     </wm-gridcolumn>
                 </wm-gridrow>
-                <wm-gridrow name="gridrow10">
+                <wm-gridrow name="gridrow10" padding="unset 2em">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn24">
                         <wm-panel iconclass="wi wi-assignment" autoclose="outsideClick" name="panel3" title="Forms" class="panel-primary" accessroles="CXAdmin,MunicipalityAdmin"></wm-panel>
                     </wm-gridcolumn>
                 </wm-gridrow>
-                <wm-gridrow name="gridrow11">
+                <wm-gridrow name="gridrow11" padding="unset 2em">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn25">
                         <wm-panel iconclass="wi wi-map-marker" autoclose="outsideClick" name="panel4" title="GIS Map" class="panel-primary">
                             <wm-gridrow name="gridrow9">
