--- a/src/main/webapp/pages/ManageUsers/ManageUsers.html
+++ b/src/main/webapp/pages/ManageUsers/ManageUsers.html
@@ -11,7 +11,7 @@
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow17">
-                    <wm-gridcolumn columnwidth="12" name="gridcolumn28">
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn28" padding="unset 2em">
                         <wm-livegrid formlayout="dialog" name="livegrid2">
                             <wm-grid gridfirstrowselect="true" editmode="dialog" title="All Users" dataset="bind:Variables.Cx2UsersData.dataSet" navigation="Classic" name="grid2" filtermode="multicolumn" exportformat="EXCEL">
                                 <wm-grid-column binding="id" caption="Id" type="integer" primary-key="true" generator="identity" readonly="true" show="true"></wm-grid-column>
