--- a/src/main/webapp/pages/VendorApplication/VendorApplication.html
+++ b/src/main/webapp/pages/VendorApplication/VendorApplication.html
@@ -11,7 +11,7 @@
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow1">
-                    <wm-gridcolumn columnwidth="12" name="gridcolumn1">
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn1" padding="unset 2em">
                         <wm-liveform novalidate="false" errormessage="" title="CivicXpress Vendor Application" iconclass="wi wi-edit" defaultmode="Edit" dataset="bind:Variables.VendorData.dataSet" captionalign="left" captionposition="top" name="liveformVendorApplication"
                         class="panel-primary" on-error="liveformVendorApplicationError($event, $operation, $data)">
                             <wm-label padding="unset 0.5em" name="lblInstructions" caption="If you would like your company made available to be selected on new forms please complete the following application.  You may then submit this application to multiple municipalities to be included in their &quot;Approved Vendors&quot; lists."></wm-label>
