--- a/src/main/webapp/pages/CompanyMunicipalities/CompanyMunicipalities.html
+++ b/src/main/webapp/pages/CompanyMunicipalities/CompanyMunicipalities.html
@@ -12,7 +12,7 @@
                 </wm-gridrow>
                 <wm-gridrow name="gridrow1">
                     <wm-gridcolumn columnwidth="6" name="gridcolumn1" padding="2em unset">
-                        <wm-label padding="unset 0.5em" caption="Manage Municipalities" fontweight="bold" fontsize="15" name="label1"></wm-label>
+                        <wm-label padding="unset 0.5em" caption="Municipality Application Status" fontweight="bold" fontsize="15" name="label1"></wm-label>
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="6" name="gridcolumn2" padding="2em unset">
                         <wm-composite name="composite1">
@@ -24,11 +24,10 @@
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow7">
-                    <wm-gridcolumn columnwidth="12" name="gridcolumn8">
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn8" padding="unset 2em">
                         <wm-livegrid formlayout="dialog" name="livegrid2">
-                            <wm-grid gridfirstrowselect="true" editmode="dialog" title="Municipality Application Status" dataset="bind:Variables.VendorApprovalsData.dataSet" navigation="Classic" name="grid2_1" filtermode="multicolumn" exportformat="EXCEL"
-                            showrecordcount="false" class="panel-primary">
-                                <wm-grid-column binding="municipalities.municipalityName" caption="Municipality Name" type="string" generator="assigned" show="true" related-entity-name="Municipalities" readonly="false"></wm-grid-column>
+                            <wm-grid gridfirstrowselect="true" editmode="dialog" title="" dataset="bind:Variables.VendorApprovalsData.dataSet" navigation="Classic" name="grid2_1" filtermode="multicolumn" exportformat="EXCEL" showrecordcount="false">
+                                <wm-grid-column binding="municipalities.municipalityName" caption="Municipality" type="string" generator="assigned" show="true" related-entity-name="Municipalities" readonly="false"></wm-grid-column>
                                 <wm-grid-column binding="approvalStatus" caption="Approval Status" type="string" generator="assigned" show="true" readonly="false"></wm-grid-column>
                                 <wm-grid-column binding="approvedBy" caption="Approved By" type="string" generator="assigned" show="true" readonly="false"></wm-grid-column>
                                 <wm-grid-column binding="dateApproved" caption="Date Approved" type="date" generator="assigned" datepattern="MM-dd-yyyy" formatpattern="toDate" show="true" readonly="false"></wm-grid-column>
