--- a/src/main/webapp/pages/CompanyProfile/CompanyProfile.html
+++ b/src/main/webapp/pages/CompanyProfile/CompanyProfile.html
@@ -25,7 +25,7 @@
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow10">
-                    <wm-gridcolumn columnwidth="12" name="gridcolumn25">
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn25" padding="unset 2em">
                         <wm-liveform novalidate="false" errormessage="" title="Vendor Info" iconclass="wi wi-edit" defaultmode="Edit" dataset="bind:Variables.UpdateVendorData.dataSet" captionalign="left" captionposition="top" name="liveform1" formdata="bind:Variables.CurrentVendorObj.firstRecord"
                         class="panel-primary" on-beforeservicecall="liveform1Beforeservicecall($event, $operation, $data)">
                             <wm-layoutgrid columns="3" name="layoutgrid1">
@@ -115,7 +115,7 @@
                                         <wm-form-field name="insuranceExpires" displayname="Insurance Expiration Date" show="true" primary-key="false" generator="assigned" key="insuranceExpires" type="date" required="required" widget="date" placeholder="Select date"
                                         outputformat="yyyy-MM-dd" mindate="bind:Variables.Today.dataSet.dataValue | toDate: 'yyyy-MM-dd'" validationmessage="Insurance Expiration Date is required" datepattern="MM-dd-yyyy"></wm-form-field>
                                     </wm-gridcolumn>
-                                    <wm-gridcolumn columnwidth="4" name="gridcolumn21" padding="2em unset unset unset">
+                                    <wm-gridcolumn columnwidth="4" name="gridcolumn21">
                                         <wm-anchor margin="unset 0.5em" name="anchor1" target="_blank" caption=""></wm-anchor>
                                         <wm-form-field name="coi" displayname="Certificate of Insurance (COI)" show="true" primary-key="false" generator="assigned" key="coi" type="blob" widget="upload" maxchars="255" required="true" validationmessage="Certificate of Insurance is required"></wm-form-field>
                                     </wm-gridcolumn>
@@ -133,13 +133,13 @@
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow12_1">
-                    <wm-gridcolumn columnwidth="12" name="gridcolumn27">
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn27" padding="unset 2em">
                         <wm-panel iconclass="wi wi-notepad" name="panel1" title="Licenses" class="panel-primary">
                             <wm-livegrid formlayout="dialog" name="livegrid1">
                                 <wm-grid gridfirstrowselect="true" editmode="dialog" title="" dataset="bind:Variables.VendorLicensesData.dataSet" navigation="Classic" name="grid1" filtermode="multicolumn" exportformat="EXCEL">
                                     <wm-grid-column binding="vendorLicenseTypes.licenseType" caption="License Type" type="string" generator="assigned" show="true" related-entity-name="VendorLicenseTypes" readonly="false"></wm-grid-column>
                                     <wm-grid-column binding="licenseNumber" caption="License Number" type="string" generator="assigned" show="true" readonly="false"></wm-grid-column>
-                                    <wm-grid-column binding="issuedDate" caption="Issued Date" type="date" generator="assigned" datepattern="MM-dd-yyyy" formatpattern="toDate" show="true" readonly="false"></wm-grid-column>
+                                    <wm-grid-column binding="issuedDate" caption="Date Issued" type="date" generator="assigned" datepattern="MM-dd-yyyy" formatpattern="toDate" show="true" readonly="false"></wm-grid-column>
                                     <wm-grid-column binding="issuingAuthority" caption="Issuing Authority" type="string" generator="assigned" show="true" readonly="false"></wm-grid-column>
                                     <wm-grid-column binding="expirationDate" caption="Expiration Date" type="date" generator="assigned" datepattern="MM-dd-yyyy" formatpattern="toDate" show="true" readonly="false"></wm-grid-column>
                                     <wm-grid-column binding="scope" caption="Scope" type="string" generator="assigned" show="true" readonly="false"></wm-grid-column>
