--- a/src/main/webapp/pages/UserOpenForms/UserOpenForms.html
+++ b/src/main/webapp/pages/UserOpenForms/UserOpenForms.html
@@ -1,9 +1,9 @@
-<wm-page data-ng-controller="UserOpenFormsPageController" pagetitle="User Open Forms">
-    <wm-header content="header"></wm-header>
-    <wm-top-nav content="topnav"></wm-top-nav>
-    <wm-content>
-        <wm-left-panel columnwidth="2" content="leftnav"></wm-left-panel>
-        <wm-page-content columnwidth="10">
+<wm-page data-ng-controller="UserOpenFormsPageController" pagetitle="User Open Forms" name="page1">
+    <wm-header content="header" name="header1"></wm-header>
+    <wm-top-nav content="topnav" name="top_nav1"></wm-top-nav>
+    <wm-content name="content1">
+        <wm-left-panel columnwidth="2" content="leftnav" name="left_panel1"></wm-left-panel>
+        <wm-page-content columnwidth="10" name="page_content1">
             <wm-layoutgrid name="layoutgrid1">
                 <wm-gridrow name="gridrow1">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn1">
@@ -11,7 +11,7 @@
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow2">
-                    <wm-gridcolumn columnwidth="12" name="gridcolumn3">
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn3" padding="unset 2em">
                         <wm-grid title="Masterforms List" dataset="bind:Variables.MasterFormsData.dataSet" navigation="Classic" name="grid1" filtermode="multicolumn">
                             <wm-grid-column binding="formTitle" caption="Form Title" type="string" generator="assigned" readonly="true" show="true"></wm-grid-column>
                             <wm-grid-column binding="formTypes.formType" caption="Form Type" type="string" generator="assigned" readonly="true" show="true" related-entity-name="FormTypes"></wm-grid-column>
@@ -26,5 +26,5 @@
             </wm-layoutgrid>
         </wm-page-content>
     </wm-content>
-    <wm-footer content="footer"></wm-footer>
+    <wm-footer content="footer" name="footer1"></wm-footer>
 </wm-page>
