UserCreation Page file Type as Image Files modified - [pages-config.json,UserCreation.js,UserCreation.html]

--- a/src/main/webapp/pages/UserCreation/UserCreation.html
+++ b/src/main/webapp/pages/UserCreation/UserCreation.html
@@ -61,7 +61,7 @@
                             </wm-gridrow>
                             <wm-gridrow name="gridrow1" padding="unset unset unset 0em">
                                 <wm-gridcolumn name="gridcolumn1" columnwidth="4" horizontalalign="left">
-                                    <wm-form-field name="photo" show="true" primary-key="false" generator="assigned" key="photo" type="blob" widget="upload" maxchars="255"></wm-form-field>
+                                    <wm-form-field name="photo" show="true" primary-key="false" generator="assigned" key="photo" type="blob" widget="upload" maxchars="255" filetype="image"></wm-form-field>
                                 </wm-gridcolumn>
                             </wm-gridrow>
                         </wm-layoutgrid>
