--- a/src/main/webapp/pages/MunicipalitySettings/MunicipalitySettings.html
+++ b/src/main/webapp/pages/MunicipalitySettings/MunicipalitySettings.html
@@ -242,7 +242,8 @@
                     <wm-gridrow name="gridrow29">
                         <wm-gridcolumn columnwidth="12" name="gridcolumn49" horizontalalign="left">
                             <wm-picture name="picture2" width="100" height="100"></wm-picture>
-                            <wm-form-field name="logo" displayname="For the best results, please use an image with a transparent background." show="true" primary-key="false" generator="assigned" key="logo" type="blob" widget="upload" maxchars="255"></wm-form-field>
+                            <wm-form-field name="logo" displayname="For the best results, please use an image with a transparent background." show="true" primary-key="false" generator="assigned" key="logo" type="blob" widget="upload" maxchars="255"
+                            filetype="image"></wm-form-field>
                         </wm-gridcolumn>
                     </wm-gridrow>
                     <wm-gridrow name="gridrow30">
